<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/bg_app_2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/white"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:fontFamily="@font/oswald"
            android:text="@string/change_password"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_size_15" />
        <TextView
            android:id="@+id/txtCloseDialogChangePassword"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_marginRight="@dimen/margin10"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_round"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_round"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edittext_round"
            android:hint="@string/enter_the_password_again"
            android:inputType="textPassword" />

        <Button
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_round_button"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_15"/>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>