<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_2"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Toolbar
        android:background="@color/white"
        android:id="@+id/toolbar_MyOrder"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:navigationIcon="@drawable/ic_keyboard_backspace_24dp"
        android:title="@string/verify"
        android:titleTextColor="@color/colorOrange" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="14dp"
        android:layout_margin="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/vip"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="1dp"
                    app:civ_border_overlay="true"
                    android:id="@+id/imgAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_users"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgVip" />

            </LinearLayout>


            <ImageView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/line_dot"
                android:layerType="software" />

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="@string/NameUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="a"
                        android:textStyle="bold"
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="@string/phone1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="b"
                        android:textStyle="bold"
                        android:id="@+id/tvPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="@string/email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvEmail"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="c"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="2"
                        android:layout_margin="8dp"
                        android:text="@string/address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvAddress"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:text="c"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


