<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBlackTransparent"
    android:orientation="vertical"
    tools:context=".src.module.myorder.view.MyOrderActivity">

    <Toolbar
        android:id="@+id/toolbar_MyOrder"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:navigationIcon="@drawable/ic_keyboard_backspace_24dp"
        android:title="@string/cart"
        android:titleTextColor="@color/colorOrange" />

    <LinearLayout
        android:id="@+id/layoutCartEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/round_icon_cart"
            android:src="@drawable/ic_cart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/cart_empty"
            android:textColor="@color/colorBlack"
            android:textSize="12dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_app_2"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProductCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorBlackTransparent" />

                <TextView
                    android:id="@+id/txtTotalAmountCart"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        gpb:cardElevation="4dp"
                        android:layout_margin="12dp"
                        gpb:cardCornerRadius="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_marginRight="12dp"
                            android:layout_marginLeft="12dp"
                            android:padding="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtTotalPriceCart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="Tiền"
                                android:textColor="@color/red"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/ic_baseline_location_on_24"
                                    android:backgroundTint="@color/colorOrange" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Địa chỉ Nhận hàng"
                                    android:textColor="#444"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/txtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="12dp"
                                android:text="sdt"
                                android:textColor="@color/colorBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtAddressOrderDetails"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="12dp"
                                android:text="Địa chỉ"
                                android:textColor="@color/colorBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="10">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edtGift"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/margin10"
                                    android:layout_weight="7"
                                    android:background="@drawable/custom_edittext_round"
                                    android:hint="@string/gift_code" />

                                <Button
                                    android:id="@+id/btnCheckGift"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="3"
                                    android:background="@drawable/custom_round2_button"
                                    android:text="@string/apply"

                                    android:textColor="#fff" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/txtResultCheckGift"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin10"
                                android:textSize="@dimen/text_size_15"
                                android:visibility="gone" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <Button
                    android:id="@+id/btnCheckoutCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_round_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/check_out"

                    android:textColor="#fff" />

                <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                    android:id="@+id/progressOrder"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_icon_cart"
                    android:visibility="gone"
                    gpb:type="nexus_rotation_cross" />
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</LinearLayout>